--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore application configuration
+/config/application.yml
+
+# Ignore fixture VCR cassettes
+
+/fixtures/vcr_cassettes
