--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -51,9 +51,11 @@ jobs:
           bundler-cache: true
       # Add or replace any other lints here
       - name: Security audit dependencies
-        run: bundle exec bundler-audit --update
+        run: bin/rails bundler-audit --update
+        # run: bundle exec bundler-audit --update
       - name: Security audit application code
-        # run: bin/brakeman -q -w2
-        run: bundle exec brakeman -q -w2
+        run: bin/brakeman -q -w2
+        # run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
-        run: bundle exec rubocop --parallel
+        run: bin/rails rubocop --parallel
+        # run: bundle exec rubocop --parallel
