Update: workflow | database credentials and url mapped to correct port

--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -18,12 +18,12 @@ jobs:
         ports:
           - "5433:5432"
         env:
-          POSTGRES_DB: rails_test
-          POSTGRES_USER: rails
-          POSTGRES_PASSWORD: password
+          POSTGRES_DB: wanderwattz_ems_test
+          POSTGRES_USER: wanderwattz_ems
+          POSTGRES_PASSWORD: <%= ENV["WANDERWATTZ_EMS_DATABASE_PASSWORD"] %>
     env:
       RAILS_ENV: test
-      DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
+      DATABASE_URL: "postgres://rails:password@localhost:5433/rails_test"
     strategy:
       fail-fast: false
       matrix:
