--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,32 @@
+# Options for each cop provided within Rubocop Documentation:
+# https://docs.rubocop.org/rubocop/index.html
+
+inherit_gem:
+  panolint: panolint-rubocop.yml
+
 AllCops:
   Exclude:
-    - 'bin/bundle'
+    - 'bin/**/*'
+    - 'spec/spec_helper.rb'
+    - 'spec/rails_helper.rb'
+    - 'config/**/*'
+    - 'db/schema.rb'
+
+Layout/LineLength:
+  Max: 80
+  IgnoreCopDirectives: true
+  AllowedPatterns:
+    - '#.*'
 
 Style/Documentation:
   Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+RSpec/ImplicitExpect:
+  EnforcedStyle: 'should'
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
