Update: workflow | remove custom rubocop path and --parallel flag

--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -76,6 +76,8 @@ jobs:
         # run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
         run: |
+          pwd
           rm -rf .rubocop_cache
-          bundle exec rubocop
+          bundle exec rubocop --config ./.rubocop.yml
+
         # run: bundle exec rubocop --parallel
