Bug: workflow | added verbose output for understanding error

--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -78,6 +78,6 @@ jobs:
         run: |
           pwd
           rm -rf .rubocop_cache
-          bundle exec rubocop --parallel
+          bundle exec rubocop --parallel -V
 
         # run: bundle exec rubocop --parallel
