--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,9 @@
 # Options for each cop provided within Rubocop Documentation:
 # https://docs.rubocop.org/rubocop/index.html
 
+inherit_gem:
+  panolint: panolint-rubocop.yml
+
 AllCops:
   Exclude:
     - 'bin/**/*'
