--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -72,16 +72,13 @@ jobs:
         run: bundle list
       - name: Security audit dependencies
         run: bundle exec bundler-audit --update
-        # run: bundle exec bundler-audit --update
       - name: Security audit application code
         run: bundle exec brakeman -q -w2
-        # run: bundle exec brakeman -q -w2
-      - name: Get panolint path
-        run: echo "PANOLINT_PATH=$(bundle info panolint --path)" >> $GITHUB_ENV
+      # - name: Get panolint path
+      #   run: echo "PANOLINT_PATH=$(bundle info panolint --path)" >> $GITHUB_ENV
       - name: Lint Ruby files
         run: |
           rm -rf .rubocop_cache
-          bundle exec rubocop --config $PANOLINT_PATH/panolint-rubocop.yml
-        # bundle exec rubocop --config .rubocop.yml
-
+          bundle exec rubocop --config .rubocop.yml --debug
+        # bundle exec rubocop --config $PANOLINT_PATH/panolint-rubocop.yml
         # run: bundle exec rubocop --parallel
