Bug: workflow | list panolint files to check for config

--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -78,6 +78,7 @@ jobs:
         run: |
           panolint_path=$(bundle info panolint --path)
           echo "$panolint_path"
+          ls $panolint_path
       - name: Append custom cops to panolint config
         run: |
           panolint_rubocop_file="$panolint_path/panolint-rubocop.yml"
