--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -77,6 +77,7 @@ jobs:
       - name: Get panolint gem path
         id: panolint_path
         run: |
+          bundle info panolint --path
           echo "PANOLINT_PATH=$(bundle info panolint --path)" >> $GITHUB_ENV
           ls $PANOLINT_PATH
 
