Test: implementing github actions demo file (#18)
* Test: implementing github actions demo file

* Update bundler, add rails_ci, configure brakeman

* Update: configure workflow for remote ruby testing

* Ruby on rails ci update

* Ruby on rails ci update

* Update: workflow | database setup and env tweaking

* Update: workflow | ruby matrix broadened

* Update: workflow | ruby matrix broadened

* Update: workflow | ruby matrix specified, syntax error on database setup

* Update: workflow | update db env

* Update: workflow | remove ruby matrix on install ruby and gems

* Update: workflow | update db creation syntax with bin/rails

* Update: workflow | database credentials and url mapped to correct port

* Update: workflow | database credentials reverted

* Update: workflow | fixed typo in geolocation_facade.rb

* Update: workflow | update gitignore for /fixtures

* Update: workflow | update gitignore for /fixtures

* Update: workflow | add api key env variable to rep and workflow

* Update: workflow | add api key env variable to rep and workflow

* Update: workflow | remove macos env

* Update: workflow | remove macos env

* Update: workflow | bundler for bundler-audit

* Update: workflow | bundle exec for remaining linter steps

* Rubocop: fix correctable offenses, and update custom cops'

* Test push, error corretion

* Add dependencies: panolint gem

* Rubocop: linter for testing, factories and implemented

* Rubocop: clear cache

* Update: workflow | clear rubocop cache and specify custom cop path

* Update: workflow | remove custom rubocop path and --parallel flag

* Update: workflow | remove custom rubocop path and --parallel flag

* Update: workflow | path update

* Update: workflow | path update

* Bug: workflow | added verbose output for understanding error

* Bug: workflow | added verbose output for understanding error

* Bug: workflow | added verbose output for understanding error

*

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@
 # Ignore application configuration
 /config/application.yml
 
-# Ignore fixture VCR cassettes
+# Ignore fixtures/VCR cassettes
+/fixtures
 
-/fixtures/vcr_cassettes
+# Ignore coverage data
+/coverage
+
+
