--- a/.github/workflows/rails_ci.yml
+++ b/.github/workflows/rails_ci.yml
@@ -53,12 +53,9 @@ jobs:
         run: bundle exec rspec
 
   lint:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        ruby: ['3.1.1']
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    env:
+      RAILS_ENV: development
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
